# pyMRAW

./: .gitignore  LICENSE  README.md  Showcase.ipynb  cih_mraw.py  pyMRAW.py  pyproject.toml  readme.rst  requirements.dev.txt  requirements.txt  setup.py  stikalo60k_16bit.cih  sync_version.py
.github/workflows/: release-and-publish-to-pypi.yml
data/: ball_12bit.cihx  ball_12bit.mraw  beam.cihx  beam.mraw
tests/: _add_to_tests.ipynb  test_all.py
